package ar.edu.patrones.dominio;
/** Estados mínimos que puede atravesar un pedido de la pizzería. */
public enum EstadoPedido {
    RECIBIDO,
    EN_PREPARACION,
    LISTO,
    ENTREGADO
}
